--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     {
       "name": "Henly",
       "email": "henly@henly.me",
-      "homepage": "www.henly.me"
+      "homepage": "http://www.henly.me"
     }
   ],
   "autoload": {
